# gameboy

./: Cargo.toml  README.md
gameboy-core/: Cargo.toml
gameboy-core/src/: bus.rs  cpu.rs  lib.rs  util.rs
gameboy-core/src/bus/: cartridge.rs  cgb.rs  dma.rs  interrupts.rs  joypad.rs  ppu.rs  serial.rs  timer.rs  wram.rs
gameboy-core/src/cpu/: registers.rs
pixels/: Cargo.toml
pixels/src/: builder.rs  lib.rs  renderers.rs
src/: debugger.rs  main.rs
src/debugger/: opcode.rs
