[package]
name = "gameboy"
version = "0.1.0"
edition = "2024"

[dependencies]
gameboy-core = { path = "gameboy-core" }

pixels = { path = "pixels" }

egui = "0.33"
egui-winit = "0.33"
egui-wgpu = "0.33"

instant = "0.1"

tracing = { workspace = true }
tracing-subscriber = "0.3"

[workspace]
members = ["gameboy-core", "pixels", "."]
default-members = ["gameboy-core", "pixels", "."]

[workspace.dependencies]
tracing = "0.1"